# vigir_grasp_control

./: .gitignore  README
grasper_mod/: CMakeLists.txt  Makefile  graspermodule.cpp  package.xml  plugindefs.h  troubleshooting.txt
grasper_mod/mods/: ros_interface.cpp  ros_interface.h
hullify/: CMakeLists.txt  package.xml
hullify/docs/: adept_launch_instructions.txt  guard_recentering_instructions.txt  osu_adept_overview  osu_adept_overview.txt  raspberrypi_launch_instructions.txt  takktile_installation.txt
hullify/include/: cluster_segmentation.h  hullify_module_view.h  hullify_view.h  mesh_bound.h  mesh_bound.h~  mesh_maker.h  mesh_storage.h  ocs_listener.h  plane_reps_and_3dmath.h  pose_transform.h  qhull_interface.h
hullify/launch/: adept_launch_instructions.txt  convex_hull_debug.launch  core_pipeline.launch  full_atlas_test.launch  kinect.launch  kinect_params.launch  l_pi.machine  launch_left_pi.launch  launch_pis.launch  launch_right_pi.launch  osu_adept_common.launch  osu_grasping.launch  pi_atlas.launch  pi_onboard.launch  r_pi.machine  raspberrypi.launch  rpi.machine
hullify/logs/: README
hullify/meshes/: hull_mesh1412190677.stl
hullify/rviz_configs/: final_pipeline_config.rviz
hullify/scripts/: launch_pi.py
hullify/src/: cluster_segmentation.cpp  convex_hull_qhull_ext.cpp  convex_hull_qhull_ext.cpp~  hull_tests.cpp  hullify_view.cpp  mesh_bound.cpp  mesh_bound.cpp~  mesh_maker.cpp  mesh_storage.cpp  ocs_listener.cpp  plane_reps_and_3dmath.cpp  pose_transform.cpp  pose_transform_driver.cpp  qhull_interface.cpp  sprint4_logger.py
hullify/test/: test_3dmath.cpp  test_hullify.cpp  test_pcl_convex_hull.cpp  test_planes.cpp  test_pose.cpp  test_storage.cpp
osu_grasp_msgs/: CMakeLists.txt
osu_grasp_msgs/msg/: CheckGraspDistanceRequest.msg  CheckGraspDistanceResponse.msg  Mesh_and_bounds.msg
osu_grasp_msgs/srv/: CheckGraspDistance.srv
rave_to_moveit/: CMakeLists.txt  Notes.txt  package.xml
rave_to_moveit/logs/: README
rave_to_moveit/plugins/: README
rave_to_moveit/src/: .grasping.py.swp  .plane_filters.py.swp  SimEnvLoading.py  atlas_and_ik.py  grasping.py  openraveIO.py  plane_filters.py  plugin_mods_verification.py  process_pool.py  service_test.py  subprocess_comm.py  vector_math.py  view_filter.py
rave_to_moveit/srv_test/: check_dist_client.cpp  check_dist_server.py
rave_to_moveit/tests/: roll_removal_test.py
vigir_grasp_controllers/: CMakeLists.txt  package.xml
vigir_grasp_controllers_old/: CMakeLists.txt  CMakeLists.txt~  package.xml
vigir_grasp_controllers_old/include/vigir_grasp_controllers_old/: vigir_grasp_controller.h  vigir_hook_grasp_controller.h  vigir_irobot_grasp_controller.h  vigir_irobot_joint_states.h  vigir_robotiq_grasp_controller.h  vigir_sandia_grasp_controller.h
vigir_grasp_controllers_old/launch/: l_hook_grasp_control.launch  l_irobot_grasp_control.launch  l_irobot_grasp_control.launch~  l_irobot_handle.launch  l_irobot_with_extension_tf.yaml  l_payload_tf.yaml  l_robotiq_grasp_control.launch  l_robotiq_handle.launch  l_robotiq_tf.yaml  l_sandia_grasp_control.launch  l_sandia_grasp_control.launch~  l_sandia_handle.launch  osu_robotiq_handle.launch  r_hook_grasp_control.launch  r_irobot_grasp_control.launch  r_irobot_grasp_control.launch~  r_irobot_handle.launch  r_irobot_with_extension_grasp_control.launch  r_irobot_with_extension_grasp_control.launch~  r_irobot_with_extension_tf.yaml  r_payload_tf.yaml  r_robotiq_grasp_control.launch  r_robotiq_grasp_control.launch~  r_robotiq_handle.launch  r_robotiq_tf.yaml  r_sandia_grasp_control.launch  r_sandia_grasp_control.launch~  r_sandia_handle.launch  r_sandia_tf.yaml
vigir_grasp_controllers_old/src/: main_hook_grasp_controller.cpp  main_irobot_grasp_controller.cpp  main_robotiq_grasp_controller.cpp  main_sandia_grasp_controller.cpp  vigir_grasp_controller.cpp  vigir_hook_grasp_controller.cpp  vigir_irobot_grasp_controller.cpp  vigir_irobot_joint_states.cpp  vigir_robotiq_grasp_controller.cpp  vigir_sandia_grasp_controller.cpp  vigir_sandia_joint_states.cpp
vigir_grasp_trajectory_controller/: CMakeLists.txt  package.xml
vigir_pick_controller/: CMakeLists.txt  package.xml
vigir_pick_controller/include/vigir_pick_controller/: vigir_pick_controller.h  vigir_robotiq_pick_controller.h
vigir_pick_controller/launch/: l_hook_tf.yaml  l_irobot_grasp_control.launch  l_irobot_handle.launch~  l_robotiq_grasp_control.launch  l_robotiq_grasp_control.launch~  l_robotiq_handle.launch  l_sandia_grasp_control.launch  l_sandia_handle.launch  osu_robotiq_handle.launch  r_irobot_grasp_control.launch  r_irobot_tf.yaml  r_robotiq_grasp_control.launch  r_robotiq_handle.launch  r_robotiq_handle.launch~  r_sandia_grasp_control.launch  r_sandia_handle.launch
vigir_pick_controller/src/: vigir_main_robotiq_pick_controller.cpp  vigir_pick_controller.cpp  vigir_robotiq_pick_controller.cpp
vigir_pick_place/: CMakeLists.txt  package.xml
vigir_pick_place/include/vigir_pick_place/: vigir_pick_place.h
vigir_pick_place/src/: vigir_pick_place.cpp
vigir_robotiq_grasp_controller/: CMakeLists.txt  package.xml
vigir_robotiq_ros_control/: CMakeLists.txt  package.xml
vigir_robotiq_ros_control/config/: l_robotiq_controllers.yaml  l_robotiq_effort_controller.yaml  l_robotiq_joint_limits.yaml  l_robotiq_position_controller.yaml  l_robotiq_position_trajectory_controller.yaml  l_robotiq_states_controller.yaml  l_robotiq_velocity_controller.yaml  r_robotiq_controllers.yaml  r_robotiq_effort_controller.yaml  r_robotiq_joint_limits.yaml  r_robotiq_position_controller.yaml  r_robotiq_position_trajectory_controller.yaml  r_robotiq_states_controller.yaml  r_robotiq_velocity_controller.yaml  robotiq_joints.yaml  robotiq_position_trajectory_controller.yaml
vigir_robotiq_ros_control/include/vigir_robotiq_ros_control/: vigir_robotiq_ros_controller.h
vigir_robotiq_ros_control/launch/: l_robotiq_ros_controller.launch  r_robotiq_ros_controller.launch
vigir_robotiq_ros_control/src/: vigir_robotiq_ros_controller.cpp
vigir_stump_grasp_controller/: CMakeLists.txt  package.xml
(+38 files in other folders)
